# tpm2-test

./: CMakeLists.txt  README.md  clean.sh
integration/: duplicate.c  esys-save-and-load-context.int.c
tpm2-duplicate-script/: duplicate.sh  helpers.sh
tpm2-duplicate-test/: CMakeLists.txt  duplicate-test.c  main.c  test-options.h
tpm2-duplicate-test/lib/: tpm2_hierarchy.h  tpm2_util.c
tpm2-duplicate-test/log/: log.c  log.h
tpm2-duplicate-test/tools/: tpm2_createek.c
tpm2-duplicate-test/tools_port/: tpm2_create.c  tpm2_create.h  tpm2_createak.c  tpm2_createak.h  tpm2_createek.c  tpm2_createek.h  tpm2_createpolicy.c  tpm2_createpolicy.h  tpm2_createprimary.c  tpm2_createprimary.h  tpm2_duplicate.c  tpm2_duplicate.h  tpm2_startauthsession.c  tpm2_startauthsession.h
